2.4 정리